prepare dataset fo fast loading

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,16 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a= pd.read_csv(\"data/moses_train.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,19 +247,516 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dataloaders.molDataset_simplified import molDataset, Loader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'[Branch1_1]': 1280295, '[Branch1_2]': 1643728, '[Branch1_3]': 4126771, '[Ring1]': 4212951, '[Branch2_1]': 320248, '[Branch2_2]': 574029, '[Branch2_3]': 580612, '[Ring2]': 852857, '[Branch3_1]': 0, '[Branch3_2]': 0, '[Branch3_3]': 0, '[Ring3]': 0, '[O]': 1765463, '[=O]': 2173567, '[N]': 3488336, '[=N]': 1317561, '[C]': 17967381, '[=C]': 7164111, '[#C]': 251376, '[S]': 741669, '[=S]': 85226, '[P]': 0, '[F]': 704628, '[C@Hexpl]': 0, '[C@@Hexpl]': 0, '[C@expl]': 0, '[C@@expl]': 0, '[H]': 0, '[NHexpl]': 178790, '[epsilon]': 4098144, '[Cl]': 187351, '[#N]': 279530, '[Br]': 52677}\n"
+      "Dataset columns: Index(['Unnamed: 0', 'smiles', 'selfies'], dtype='object')\n",
+      "> Loaded edge and atoms types to one-hot mappings\n",
+      "-> Careful : Using PREDEFINED selfies alphabet : moses_alphabets.json\n",
+      "> Loaded alphabet. Using selfies. Max sequence length allowed is 54\n"
      ]
     }
    ],
    "source": [
-    "print(al)"
+    "loaders = Loader(maps_path='map_files/',\n",
+    "                    csv_path=\"data/moses_train.csv\",\n",
+    "                    vocab=\"selfies\",\n",
+    "                    build_alphabet=False,\n",
+    "                    alphabet_name = \"moses_alphabets.json\", \n",
+    "                    n_mols=-1,\n",
+    "                    num_workers=1,\n",
+    "                    batch_size=64)\n",
+    "                #  props=properties,\n",
+    "                #  targets=targets)\n",
+    "\n",
+    "train_loader, _, test_loader = loaders.get_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.environ['CUDA_VISIBLE_DEVICES']='6'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tqdm.notebook import tqdm\n",
+    "import dgl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "477d72395b0d4930800909cc8a7b6c16",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=23522.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception ignored in: <function _MultiProcessingDataLoaderIter.__del__ at 0x7f6d3c461dd0>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/mcb/users/achol1/.conda/envs/optimol2/lib/python3.7/site-packages/torch/utils/data/dataloader.py\", line 962, in __del__\n",
+      "    self._shutdown_workers()\n",
+      "  File \"/home/mcb/users/achol1/.conda/envs/optimol2/lib/python3.7/site-packages/torch/utils/data/dataloader.py\", line 942, in _shutdown_workers\n",
+      "    w.join()\n",
+      "  File \"/home/mcb/users/achol1/.conda/envs/optimol2/lib/python3.7/multiprocessing/process.py\", line 138, in join\n",
+      "    assert self._parent_pid == os.getpid(), 'can only join a child process'\n",
+      "AssertionError: can only join a child process\n",
+      "Exception ignored in: <function _MultiProcessingDataLoaderIter.__del__ at 0x7f6d3c461dd0>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/mcb/users/achol1/.conda/envs/optimol2/lib/python3.7/site-packages/torch/utils/data/dataloader.py\", line 962, in __del__\n",
+      "    self._shutdown_workers()\n",
+      "  File \"/home/mcb/users/achol1/.conda/envs/optimol2/lib/python3.7/site-packages/torch/utils/data/dataloader.py\", line 942, in _shutdown_workers\n",
+      "    w.join()\n",
+      "  File \"/home/mcb/users/achol1/.conda/envs/optimol2/lib/python3.7/multiprocessing/process.py\", line 138, in join\n",
+      "    assert self._parent_pid == os.getpid(), 'can only join a child process'\n",
+      "AssertionError: can only join a child process\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, (graph, smile) in tqdm(enumerate(train_loader), total = len(train_loader)):\n",
+    "    s = smile\n",
+    "    save_graphs(\"data/batched_dataset/{}.bin\".format(i),dgl.unbatch(graph))\n",
+    "    if(i==10):\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "920"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sys.getsizeof(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'cuda'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using backend: pytorch\n"
+     ]
+    }
+   ],
+   "source": [
+    "from dgl.data.utils import save_graphs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dgl.data.utils import load_graphs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for _ in range(100):\n",
+    "    load_graphs(\"data/onebatch.bin\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_graphs(\"data/onebatch.bin\",dgl.unbatch(g[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_graph': <dgl.graph_index.GraphIndex at 0x7f5b144facd0>,\n",
+       " '_node_frame': <dgl.frame.FrameRef at 0x7f5b144f9d50>,\n",
+       " '_edge_frame': <dgl.frame.FrameRef at 0x7f5b145045d0>,\n",
+       " '_msg_index': None,\n",
+       " '_msg_frame': <dgl.frame.FrameRef at 0x7f5b145048d0>,\n",
+       " '_message_func': None,\n",
+       " '_reduce_func': None,\n",
+       " '_apply_node_func': None,\n",
+       " '_apply_edge_func': None,\n",
+       " '_batch_num_nodes': [25,\n",
+       "  18,\n",
+       "  20,\n",
+       "  23,\n",
+       "  20,\n",
+       "  24,\n",
+       "  23,\n",
+       "  19,\n",
+       "  22,\n",
+       "  23,\n",
+       "  22,\n",
+       "  18,\n",
+       "  19,\n",
+       "  18,\n",
+       "  22,\n",
+       "  15,\n",
+       "  21,\n",
+       "  20,\n",
+       "  17,\n",
+       "  19,\n",
+       "  21,\n",
+       "  19,\n",
+       "  23,\n",
+       "  25,\n",
+       "  23,\n",
+       "  24,\n",
+       "  20,\n",
+       "  25,\n",
+       "  19,\n",
+       "  21,\n",
+       "  20,\n",
+       "  24,\n",
+       "  24,\n",
+       "  18,\n",
+       "  20,\n",
+       "  23,\n",
+       "  25,\n",
+       "  25,\n",
+       "  21,\n",
+       "  21,\n",
+       "  23,\n",
+       "  22,\n",
+       "  24,\n",
+       "  17,\n",
+       "  22,\n",
+       "  20,\n",
+       "  25,\n",
+       "  22,\n",
+       "  21,\n",
+       "  20,\n",
+       "  20,\n",
+       "  21,\n",
+       "  22,\n",
+       "  25,\n",
+       "  24,\n",
+       "  23,\n",
+       "  25,\n",
+       "  21,\n",
+       "  25,\n",
+       "  23,\n",
+       "  24,\n",
+       "  24,\n",
+       "  17,\n",
+       "  23],\n",
+       " '_batch_num_edges': [54,\n",
+       "  40,\n",
+       "  42,\n",
+       "  50,\n",
+       "  44,\n",
+       "  50,\n",
+       "  50,\n",
+       "  38,\n",
+       "  48,\n",
+       "  50,\n",
+       "  48,\n",
+       "  38,\n",
+       "  38,\n",
+       "  38,\n",
+       "  50,\n",
+       "  30,\n",
+       "  44,\n",
+       "  42,\n",
+       "  34,\n",
+       "  42,\n",
+       "  44,\n",
+       "  40,\n",
+       "  50,\n",
+       "  54,\n",
+       "  48,\n",
+       "  52,\n",
+       "  42,\n",
+       "  52,\n",
+       "  40,\n",
+       "  44,\n",
+       "  42,\n",
+       "  50,\n",
+       "  50,\n",
+       "  36,\n",
+       "  42,\n",
+       "  50,\n",
+       "  54,\n",
+       "  54,\n",
+       "  44,\n",
+       "  44,\n",
+       "  50,\n",
+       "  46,\n",
+       "  50,\n",
+       "  34,\n",
+       "  46,\n",
+       "  42,\n",
+       "  54,\n",
+       "  46,\n",
+       "  46,\n",
+       "  42,\n",
+       "  40,\n",
+       "  46,\n",
+       "  46,\n",
+       "  52,\n",
+       "  52,\n",
+       "  48,\n",
+       "  54,\n",
+       "  44,\n",
+       "  56,\n",
+       "  50,\n",
+       "  50,\n",
+       "  52,\n",
+       "  36,\n",
+       "  50],\n",
+       " '_parent': None}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g[0].__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "Batched DGLGraph is not supported for serialization",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_35825/2902307665.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msave_graphs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"data/100graphs.bin\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mg\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/.conda/envs/optimol2/lib/python3.7/site-packages/dgl/data/graph_serialize.py\u001b[0m in \u001b[0;36msave_graphs\u001b[0;34m(filename, g_list, labels)\u001b[0m\n\u001b[1;32m    105\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    106\u001b[0m         \u001b[0mlabel_dict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 107\u001b[0;31m     \u001b[0mgdata_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mGraphData\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mg\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mg\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mg_list\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    108\u001b[0m     \u001b[0m_CAPI_DGLSaveGraphs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgdata_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel_dict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    109\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.conda/envs/optimol2/lib/python3.7/site-packages/dgl/data/graph_serialize.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    105\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    106\u001b[0m         \u001b[0mlabel_dict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 107\u001b[0;31m     \u001b[0mgdata_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mGraphData\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mg\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mg\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mg_list\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    108\u001b[0m     \u001b[0m_CAPI_DGLSaveGraphs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgdata_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel_dict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    109\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.conda/envs/optimol2/lib/python3.7/site-packages/dgl/data/graph_serialize.py\u001b[0m in \u001b[0;36mcreate\u001b[0;34m(g)\u001b[0m\n\u001b[1;32m     30\u001b[0m         \u001b[0;34m\"\"\"Create GraphData\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m         \u001b[0;31m# TODO(zihao): support serialize batched graph in the future.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 32\u001b[0;31m         \u001b[0;32massert\u001b[0m \u001b[0mg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbatch_size\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Batched DGLGraph is not supported for serialization\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     33\u001b[0m         \u001b[0mghandle\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_graph\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndata\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: Batched DGLGraph is not supported for serialization"
+     ]
+    }
+   ],
+   "source": [
+    "save_graphs(\"data/100graphs.bin\", g[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dgl_utils import send_graph_to_device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(g)):\n",
+    "    send_graph_to_device(g[i], device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([16, 12, 16,  2, 29, 13, 16, 16, 16, 19,  0, 29, 13,  2, 29, 13, 14, 16,\n",
+       "        16,  2, 29, 16, 16, 16,  2, 29, 16, 16,  3,  2, 29, 29, 29, 29, 29, 29,\n",
+       "        29, 29, 29, 29, 29, 29, 29, 29, 29, 29, 29, 29, 29, 29, 29, 29, 29, 29])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from rdkit import Chem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from selfies import decoder, encoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "srg = \"\"\n",
+    "for c in s[0]:\n",
+    "    srg +=  al[c]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'[C][O][C][Branch1_3][epsilon][=O][C][C][C][S][Branch1_1][epsilon][=O][Branch1_3][epsilon][=O][N][C][C][Branch1_3][epsilon][C][C][C][Branch1_3][epsilon][C][C][Ring1][Branch1_3][epsilon][epsilon][epsilon][epsilon][epsilon][epsilon][epsilon][epsilon][epsilon][epsilon][epsilon][epsilon][epsilon][epsilon][epsilon][epsilon][epsilon][epsilon][epsilon][epsilon][epsilon][epsilon][epsilon][epsilon]'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "srg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'COC(=O)CCCS(=O)(=O)N1CC(C)CC(C)C1'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "decoder(srg)"
    ]
   },
   {
@@ -276,7 +764,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Chem.MolFromSmiles()"
+   ]
   }
  ],
  "metadata": {
@@ -298,7 +788,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.7.7"
   },
   "orig_nbformat": 4
  },
